Adding name property to ARMResource base model and introduce new ResourceNameParameter to simplify name (#661)
This PR contains:
- Adding `name` to `ArmResource` base model to match ARM definition
- Adding a spread model to be used by top level ARM resources to
simplify `name` parameter declaration.

No tests added at this point.

---------

Co-authored-by: Mark Cowlishaw <markcowl@microsoft.com>

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -166,6 +166,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ResourceInstanceParameters`](./data-types.md#Azure.ResourceManager.ResourceInstanceParameters)
 - [`ResourceKind`](./data-types.md#Azure.ResourceManager.ResourceKind)
 - [`ResourceListResult`](./data-types.md#Azure.ResourceManager.ResourceListResult)
+- [`ResourceNameParameter`](./data-types.md#Azure.ResourceManager.ResourceNameParameter)
 - [`ResourceParentParameters`](./data-types.md#Azure.ResourceManager.ResourceParentParameters)
 - [`ResourcePlan`](./data-types.md#Azure.ResourceManager.ResourcePlan)
 - [`ResourceSku`](./data-types.md#Azure.ResourceManager.ResourceSku)
