--- a/.chronus/changes/export_more_api-2024-3-23-17-29-45.md
+++ b/.chronus/changes/export_more_api-2024-3-23-17-29-45.md
@@ -1,7 +1,7 @@
 ---
-changeKind: feature
+changeKind: fix
 packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-export int and float type judgement function
+export int and float type judgement function
