--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -141,6 +141,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`EncryptionConfiguration`](./data-types.md#Azure.ResourceManager.EncryptionConfiguration)
 - [`EntityTag`](./data-types.md#Azure.ResourceManager.EntityTag)
 - [`ErrorResponse`](./data-types.md#Azure.ResourceManager.ErrorResponse)
+- [`ExtendedLocationProperty`](./data-types.md#Azure.ResourceManager.ExtendedLocationProperty)
 - [`ExtensionResource`](./data-types.md#Azure.ResourceManager.ExtensionResource)
 - [`KeysOf`](./data-types.md#Azure.ResourceManager.KeysOf)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.LocationParameter)
@@ -197,6 +198,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`DefaultBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.DefaultBaseParameters)
 - [`ErrorAdditionalInfo`](./data-types.md#Azure.ResourceManager.Foundations.ErrorAdditionalInfo)
 - [`ErrorDetail`](./data-types.md#Azure.ResourceManager.Foundations.ErrorDetail)
+- [`ExtendedLocation`](./data-types.md#Azure.ResourceManager.Foundations.ExtendedLocation)
 - [`ExtensionBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionBaseParameters)
 - [`ExtensionResourceBase`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionResourceBase)
 - [`ExtensionScope`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionScope)
