Adding back ExtensionResource base and fixing tests

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -200,6 +200,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ErrorDetail`](./data-types.md#Azure.ResourceManager.Foundations.ErrorDetail)
 - [`ExtendedLocation`](./data-types.md#Azure.ResourceManager.Foundations.ExtendedLocation)
 - [`ExtensionBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionBaseParameters)
+- [`ExtensionResource`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionResource)
 - [`ExtensionScope`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionScope)
 - [`LocationBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.LocationBaseParameters)
 - [`LocationScope`](./data-types.md#Azure.ResourceManager.Foundations.LocationScope)
